Adding og meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>KEXP + Spotify Player | by Aerobatic</title>
+    <title>KEXP + Spotify Player by Aerobatic</title>
+    <meta property="og:title" content="KEXP + Spotify Player by Aerobatic" />
     <meta name="description" content="KEXP radio stream player with Spotify integration" />
+    <meta property="og:image" content="https://kexp-spotify.aerobatic.io/open-graph.png" />
+    <meta property="og:url" content="https://kexp-spotify.aerobatic.io" />
   </head>
   <body>
     <noscript>
